# perigee

./: .gitignore  Cargo.toml  Dev.md  README.md  compose.dev.yaml  dev.Dockerfile  devenv.nix  devenv.yaml  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
crates/modules/perigee-affinity/: Cargo.toml
crates/modules/perigee-affinity/src/: affinity.rs  config.rs  daemon.rs  lib.rs  pve.rs  topology.rs
crates/modules/perigee-affinity/src/ui/: apply.rs  mod.rs  strategy.rs  topology_view.rs
crates/modules/perigee-sriov/: Cargo.toml
crates/modules/perigee-sriov/src/: config.rs  daemon.rs  detect.rs  fdb.rs  lib.rs  mac_strategy.rs  vf.rs  vm_usage.rs
crates/modules/perigee-sriov/src/ui/: fdb_config.rs  mod.rs  pf_select.rs  result.rs  review.rs  vf_config.rs
crates/perigee-bin/: Cargo.toml
crates/perigee-bin/src/: client.rs  install.rs  main.rs
crates/perigee-bin/src/ui/: common.rs  home.rs  mod.rs
crates/perigee-bin/src/ui/sriov/: fdb_config.rs  mod.rs  pf_select.rs  review.rs  vf_config.rs
crates/perigee-cli/: Cargo.toml  build.rs
crates/perigee-cli/src/: cli.rs  install.rs  main.rs
crates/perigee-cli/src/ui/: common.rs  home.rs  mod.rs  tui.rs
crates/perigee-core/: Cargo.toml
crates/perigee-core/src/: client.rs  error.rs  iommu.rs  ipc.rs  lib.rs  mac.rs  pci.rs  sysfs.rs  sysinfo.rs
crates/perigee-daemon/: Cargo.toml
crates/perigee-daemon/src/: config.rs  lib.rs  module.rs  notify.rs  scheduler.rs  server.rs  sriov_module.rs
crates/perigee-sriov/: Cargo.toml
crates/perigee-sriov/src/: config.rs  lib.rs  vf.rs
crates/perigee-tui/: Cargo.toml
crates/perigee-tui/src/: lib.rs
